--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ a.button.primary {
     display: flex;
     justify-content: space-between;
     background-color: white;
+    grid-area: nav;
 }
 #hero nav ul {
     list-style-type: none;
@@ -65,31 +66,42 @@ nav a {
 }
 
 /* Style the hero unit grid */
-#hero {
+#bg {
     background-image: url("images/luxury_bags.png");
     background-repeat: no-repeat;
-    background-size: 48vw;
-    background-position: right bottom;
+    background-size: contain;
+    background-position: top center;
+    grid-area: bg;
+    height: 300px;
 }
 #tagline {
     padding: 1em;
     width: 48vw;
+    grid-area: tag;
 }
 /* other styles */
 main {
-    padding: 1em;
+    padding: 5px;
 }
 footer {
     color: white;
     padding: 1em;
     background-color: var(--dark-blue);
 }
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 780px) {
     #hero {
         display: grid;
-        grid-template-columns: 1fr 2fr 7fr;
-        grid-template-rows: minmax(80px, auto) minmax(100px, auto) minmax(25vh, 50%);
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 60px minmax(50vh, 60vh);
         grid-template-areas: 
+        "nav nav"
+        "tag bg"; 
+    }
+    #bg {
+        height: auto;
+    }
+} 
+        
         /*padding: 50px;
 
     }
